--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 // @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
@@ -12,4 +11,11 @@
 @import "node_modules/font-awesome/scss/font-awesome";
 
 //Bulma Vue Modules
-@import "node_modules/buefy/src/scss/buefy"
+@import "node_modules/buefy/src/scss/buefy";
+
+//Custom Sass
+
+@import "overrides";
+@import "helpers";
+@import "styles";
+@import "manage";
