--- a/resources/assets/sass/overrides.scss
+++ b/resources/assets/sass/overrides.scss
@@ -2,30 +2,30 @@
     color: $grey-light;    
 }
 
-.dropdown {
-    position: relative;
+// .dropdown {
+//     position: relative;
 
-    .dropdown-menu {
-        text-align: left;
-        display: none;
-        position: absolute;
-        left: 0;
-        top: 102%;
-        z-index: 1000;
-        min-width: 200px;
-        background-color: $white;
-        box-shadow: 0 0 1px rgba(57,70,78,0.15), 0 20px 55px -8px rgba(57,70,78,0.25);
-    }
+//     .dropdown-menu {
+//         text-align: left;
+//         display: none;
+//         position: absolute;
+//         left: 0;
+//         top: 102%;
+//         z-index: 1000;
+//         min-width: 200px;
+//         background-color: $white;
+//         box-shadow: 0 0 1px rgba(57,70,78,0.15), 0 20px 55px -8px rgba(57,70,78,0.25);
+//     }
 
-    &.is-aligned-right .dropdown-menu {
-        right: 0;
-        left: auto;
-    }
+//     &.is-aligned-right .dropdown-menu {
+//         right: 0;
+//         left: auto;
+//     }
 
-    &.is-open .dropdown-menu {
-        display: block;
-    }
-}
+//     &.is-open .dropdown-menu {
+//         display: block;
+//     }
+// }
 
 li {
     &.separator {
@@ -44,50 +44,50 @@ li {
 }
 
 
-.nav-right {
-    overflow: visible;
-}
+// .nav-right {
+//     overflow: visible;
+// }
 
-button.nav-item {
-    color: $text-light;
-    background-color: transparent;
-    border: none;
+// button.nav-item {
+//     color: $text-light;
+//     background-color: transparent;
+//     border: none;
 
-    &:hover {
-      color: $link-hover;
-    }
-    // Modifiers
-    &.is-active {
-      color: $link-active;
-    }
+//     &:hover {
+//       color: $link-hover;
+//     }
+//     // Modifiers
+//     &.is-active {
+//       color: $link-active;
+//     }
 
-    &.is-tab {
-        border-bottom: 1px solid transparent;
-        border-top: 1px solid transparent;
-        padding-bottom: calc(0.75rem - 1px);
-        padding-left: 1rem;
-        padding-right: 1rem;
-        padding-top: calc(0.75rem - 1px);
+//     &.is-tab {
+//         border-bottom: 1px solid transparent;
+//         border-top: 1px solid transparent;
+//         padding-bottom: calc(0.75rem - 1px);
+//         padding-left: 1rem;
+//         padding-right: 1rem;
+//         padding-top: calc(0.75rem - 1px);
 
-        &:hover {
-            border-bottom-color: $primary;
-            border-top-color: transparent;
-        }
+//         &:hover {
+//             border-bottom-color: $primary;
+//             border-top-color: transparent;
+//         }
 
-        &.is-active {
-            border-bottom: 3px solid $primary;
-            color: $primary;
-            padding-bottom: calc(0.75rem - 3px);
-        }
-    }
+//         &.is-active {
+//             border-bottom: 3px solid $primary;
+//             color: $primary;
+//             padding-bottom: calc(0.75rem - 3px);
+//         }
+//     }
       
-    // Responsiveness
-    +desktop {
-        &.is-brand {
-          padding-left: 0
-        }
-    }
-}
+//     // Responsiveness
+//     +desktop {
+//         &.is-brand {
+//           padding-left: 0
+//         }
+//     }
+// }
 
 .nav {
     max-height: 4.5rem;
